--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macos desktop service store
+.DS_Store
+
 # Prerequisites
 *.d
 
@@ -50,3 +53,14 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# build directories
+*build*/
