implement ns_state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ endif()
 set(NSFD_SRCS
   src/ns_real.c
   src/ns_sf.c
+  src/ns_state.c
   src/ns_vf.c
 )
 add_library(nsfd ${NSFD_SRCS})
@@ -64,6 +65,7 @@ if(nsfd_BUILD_TESTS)
 
   add_nsfd_test(ns_sf.test src/ns_sf.test.cpp)
   add_nsfd_test(ns_vf.test src/ns_vf.test.cpp)
+  add_nsfd_test(ns_state.test src/ns_state.test.cpp)
 endif()
 
 if(nsfd_BUILD_APP)
